--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,10 @@ body {
   font-weight: 400;
   line-height: 1.7;
   color: #696969;
-  font-size: 16px;
+  font-size: 14px;
+}
+img {
+  width: 100%;
 }
 
 h2,
@@ -34,19 +37,22 @@ h1 {
 }
 
 h2 {
-  font-size: 50px;
-  font-weight: 100;
+  font-size: 25px;
+  font-weight: 700;
+  padding: 10px 0;
   margin: 0;
 }
 
 h3 {
-  font-size: 36px;
-  font-weight: 300;
+  font-size: 20px;
+  font-weight: 700;
+  padding: 10px 0;
 }
 
 h4 {
   font-size: 1.125em;
   font-weight: 500;
+  padding: 10px 0;
   margin: 0;
 }
 
@@ -71,49 +77,34 @@ a:focus {
   text-decoration: none;
 }
 
-blockquote {
-  border: none;
-  padding: 0;
-}
 
-.text-small {
-  font-size: 14px;
-  font-weight: 500;
-  text-transform: uppercase;
+/********************************************************************/
+.content {
+  width: 70%;
+  margin: 0 auto;
 }
+.featured-stories, .top-stories, .opinion {
+  padding: 10px;
 
-.sub-heading {
-  font-size: 20px;
 }
+.content-block {
 
-.client-name {
-  font-style: italic;
-  display: block;
 }
+.content-panel {
+  margin: 15px auto;
+  border-top: 1px solid #696969;
+  border-bottom: 1px solid #696969;
+}
+.content-flex-panel {
+
+}
+/********************************************************************/
+
+
 
 @media (max-width: 768px) {
-  h1 {
-    font-size: 2.5em;
-  }
 
-  h2 {
-    font-size: 2em;
-  }
-
-  h3 {
-    font-size: 2em;
-  }
-
-  p {
-    margin-bottom: 20px;
-  }
-}
-small, .font_small {
-  font-size: 0.707em;
 }
 
-.list-block li {
-  float: right;
-}
 
 /******************** ICONGRAPHY ********************/
