--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,11 +26,12 @@ h6 {
 
 h1 {
   font-family: 'Raleway', sans-serif;
-  font-size: 4.5em;
+  font-size: 1.82rem;
   font-weight: 600;
+  color:black;
   line-height: 1.04;
-  color: #fff;
   text-transform: uppercase;
+  margin-bottom: 25px;
 }
 
 h2 {
@@ -45,8 +46,8 @@ h3 {
 }
 
 h4 {
-  font-size: 1.125em;
-  font-weight: 500;
+  font-size: 1.5em;
+  font-weight: 800;
   margin: 0;
 }
 
@@ -71,27 +72,11 @@ a:focus {
   text-decoration: none;
 }
 
-blockquote {
-  border: none;
-  padding: 0;
+.mg-top {
+  margin-top: 35px;
 }
 
-.text-small {
-  font-size: 14px;
-  font-weight: 500;
-  text-transform: uppercase;
-}
-
-.sub-heading {
-  font-size: 20px;
-}
-
-.client-name {
-  font-style: italic;
-  display: block;
-}
-
-@media (max-width: 768px) {
+@media (max-width: 650px) {
   h1 {
     font-size: 2.5em;
   }
@@ -107,17 +92,28 @@ blockquote {
   p {
     margin-bottom: 20px;
   }
-}
-small, .font_small {
-  font-size: 0.707em;
+
 }
 
-.list-block li {
-  float: right;
+
+
+/******************** NAVIGATIONS ********************/
+
+header {
+  min-height: 200px;
+}
+svg{
+  height: 100%;
+  width: 100%;
 }
 
-.navbar{
+.navbar-dark{
   transition: all 2s;
+  background: red!important;
+}
+
+.fixed-top.navbar {
+  padding: 0 15px 0 15px!important;
 }
 .my-top-nav {
   height: 110px;
@@ -129,7 +125,72 @@ small, .font_small {
   transition: all 2s;
 }
 
-body{
-  height: 2000px;
+.top-nav-date{
+  color: #fff;
+  font-weight: bold;
 }
+
+.top-nav-sub .signin {
+  background: none;
+  color: #fff;
+  border: 0 solid red;
+}
+
+.top-nav-sub .subscribe {
+  background: #fff;
+  color: red;
+  font-weight: bold;
+  border: 0 solid red
+  padding: 0 5px 0 5px
+}
+.my-bottom-nav.navbar-light {
+  background: #fff!important;
+  border-bottom: 2px solid #808080;
+}
+
+.navbar-nav .nav-item .nav-link {
+  font-size: 1.5rem;
+  font-weight: bold;
+  border-right: 1px solid #808080;
+  line-height: 20px;
+  color: black;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+.navbar-nav .nav-item .nav-link:hover {
+  color: red;
+}
+
+
+@media only screen and (max-device-width: 480px), only screen and (min-device-width: 560px) and (max-device-width: 1136px) and (-webkit-min-device-pixel-ratio: 2) {
+
+    svg{
+      height: 55px;
+      width: 130px;
+    }
+
+    .my-bottom-nav.navbar-light {
+
+      border-bottom: 0px solid #808080;
+    }
+
+    .navbar-nav .nav-item .nav-link {
+
+      border-right: 0px solid #808080;
+    }
+
+}
+
+.inthe-magazine {
+  min-height: 800px;
+}
+
+.inthe-magazine img{
+  width: 100%;
+}
+
+
+
+
 /******************** ICONGRAPHY ********************/
