--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,6 +94,13 @@ p {
   }
 }
 
+.border {
+  height: 1px;
+  background: black;
+  width: 100%;
+  display: inline-block;
+  margin-bottom: 10px;
+}
 
 /******************** INTHEMEGAZINE ********************/
 .mg-top{
@@ -108,6 +115,3 @@ p {
 .section-generic img{
   width: 100%;
 }
-
-
-/******************** editorpick ********************/
