small mergin issue fixed in megazine section.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -243,6 +243,9 @@ svg{
   width: 100%;
 }
 
+.mg-m-tp {
+  margin-top: -40px;
+}
 
 /****************** Footer **************************/
 footer {
